filtered and mapped

--- a/Text.html
+++ b/Text.html
@@ -4,14 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <script> 
-    let timeList = document.querySelectorAll('[data-time]')
-      console.log(timeList)
-  </script>
   <title>Document</title>
 </head>
 <body>
-  <ol>
+  <ul>
     <li date-time='2:45'>flex box</li>
     <li date-time='5:6'>flex box</li>
     <li date-time='5:45'>flex box</li>
@@ -28,7 +24,14 @@
     <li date-time='85:45'>flex box</li>
     <li date-time='25:32'>redus box</li>
     <li date-time='7:0'>flex box</li>
-  </ol>
+  </ul>
+  <script> 
+    let timeList = Array.from(document.querySelectorAll('[date-time]'))
+    const filt = timeList
+      .filter(each=>each.textContent.includes('flex'))
+      .map(item=>item.dataset.time)
+      console.log(filt)
+  </script>
 </body>
 </html>
 
