--- a/Text.html
+++ b/Text.html
@@ -8,29 +8,37 @@
 </head>
 <body>
   <ul>
-    <li date-time='2:45'>flex box</li>
-    <li date-time='5:6'>flex box</li>
-    <li date-time='5:45'>flex box</li>
-    <li date-time='6:12'>flex box</li>
-    <li date-time='1:23'>redux box</li>
-    <li date-time='0:32'>flex box</li>
-    <li date-time='8:46'>flex box</li>
-    <li date-time='8:74'>flex box</li>
-    <li date-time='10:5'>redux box</li>
-    <li date-time='9:12'>flex box</li>
-    <li date-time='0:23'>flex box</li>
-    <li date-time='7:12'>redus box</li>
-    <li date-time='21:45'>flex box</li>
-    <li date-time='85:45'>flex box</li>
-    <li date-time='25:32'>redus box</li>
-    <li date-time='7:0'>flex box</li>
+    <li data-time='2:45'>flex box</li>
+    <li data-time='5:6'>flex box</li>
+    <li data-time='5:45'>flex box</li>
+    <li data-time='6:12'>flex box</li>
+    <li data-time='1:23'>redux box</li>
+    <li data-time='0:32'>flex box</li>
+    <li data-time='8:46'>flex box</li>
+    <li data-time='8:74'>flex box</li>
+    <li data-time='10:5'>redux box</li>
+    <li data-time='9:12'>flex box</li>
+    <li data-time='0:23'>flex box</li>
+    <li data-time='7:12'>redus box</li>
+    <li data-time='21:45'>flex box</li>
+    <li data-time='85:45'>flex box</li>
+    <li data-time='25:32'>redus box</li>
+    <li data-time='7:0'>flex box</li>
   </ul>
   <script> 
-    let timeList = Array.from(document.querySelectorAll('[date-time]'))
+  // pop out the digitsfrom the date-time, convert it to an array, then to numbers, and get  the totaltime
+    let timeList = Array.from(document.querySelectorAll('[data-time]'))
     const filt = timeList
       .filter(each=>each.textContent.includes('flex'))
       .map(item=>item.dataset.time)
-      console.log(filt)
+      .map(timeCpde=>{
+        const part = timeCpde.split(':')
+        .map(each=>each.split(':'))
+        .map(each=>parseInt(each))
+        return (part[0]*60 )+ part[1]
+      })
+      .reduce((a, b) => a +b,0)
+        console.log(filt)
   </script>
 </body>
 </html>
