--- a/templatestrings.html
+++ b/templatestrings.html
@@ -40,5 +40,12 @@
     </div>
   `
   document.body.innerHTML=detail
+
+  const list = ['one', 'two', 'three', 'four', 'five'];
+  let  list1 = `
+      <p> ${list.map(each => `${each} is a number `) ${</br}}  </p>
+    `
+  document.body.innerHTML = list1
+   
 </script>
 </html>
