--- a/templatestrings.html
+++ b/templatestrings.html
@@ -7,7 +7,11 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <section>
+
+    <abbr>MY name is Bernardine</abbr>
+    <div>I am a girl</div>
+  </section>
 </body>
 <script>
   const names = 'Ada';
@@ -75,5 +79,8 @@
   };
   const occupation = ` ${CSS} `;
   console.log(occupation)
+
+
+
 </script>
 </html>
