--- a/StringMethods.html
+++ b/StringMethods.html
@@ -22,6 +22,9 @@
   // --endsWith()
     // Its use to check if a string ends with a particular character
   let end = name.endsWith('e')
+  let size = 'Eze124'
+  end = size.endsWith('e', 3)
+  // This means within the first 3 characters, check if tt endswith e
   console.log(end)
 </script>
 </html>
