the includes string method

--- a/StringMethods.html
+++ b/StringMethods.html
@@ -26,5 +26,11 @@
   end = size.endsWith('e', 3)
   // This means within the first 3 characters, check if tt endswith e
   console.log(end)
+
+  // ==includes()
+  let account = 'DFGHIU'
+  let include = account.includes('IU')
+  // This checks id the charater is containedwithin the variable
+  console.log(include)
 </script>
 </html>
