--- a/Array.find-findindex.html
+++ b/Array.find-findindex.html
@@ -40,6 +40,7 @@
       likes: 'Bernar',
    }
   ]
+// Array.find is used to find a particular object in an array 
   const choice = 'Immanuel'
   const search = detail.find(one => one.name === choice)
   console.log(search)
@@ -52,6 +53,7 @@
       // nickname: "Grace"​
       // school: "Heave"
 
+// Array.findIndec is used find the index of a particular object in an array
   const index = detail.findIndex(one => one.name === choice)
   console.log(index)
       // 1
