last commit for day 21

--- a/Css/Specificity.html
+++ b/Css/Specificity.html
@@ -16,13 +16,25 @@
       color: blueviolet
     }
     .main1 p{
-      color: blue
+      color: #eb470c
     }
     p{
       color: #3cff00
     }
     #sub1{
-      color: rgb(226, 43, 43)
+      color: #f30808
+    }
+    #sub2{
+      color: #1b2b17
+    }
+    #main2{
+      color: #0782e7
+    }
+    .sub3{
+      color: #eeff00
+    }
+    .main3{
+      color: #7c094c
     }
   </style>
 </head>
@@ -33,9 +45,17 @@
   <div class="main1">
     <p id="sub1">This is a paragraph2</p>
   </div>
-</body>
-<!-- This is a paragraph1 - blue
+  <div id="main2">
+    <p id="sub2">This is a paragraph3</p>
+  </div>
+  <div class="main3">
+    <p class="sub3">This is a paragraph4</p>
+  </div>
 
-This is a paragraph2 - red -->
+</body>
+<!--  This is a paragraph1 - blue
+      This is a paragraph2 - red 
+      This is a paragraph3 - #1b2b17
+      This is a paragraph4 - #eeff00-->
 
 </html>
