--- a/Css/DirectChildren.html
+++ b/Css/DirectChildren.html
@@ -9,6 +9,11 @@
     .main > p{
       color: cornflowerblue;
     }
+    /* The > here refers to only the direct p tags of the class main */
+    .main2 p{
+      color: darkblue
+    }
+    /* This refers to all p tags in the class main2 */
   </style>
 </head>
 <body>
@@ -16,6 +21,12 @@
     <p>This is the direct child paragraph</p>
     <div>
       <p>This is the dircet grandchild paragraph </p>
+    </div>
+  </div>
+  <div class="main2">
+    <p>This is the direct child paragraph2</p>
+    <div>
+      <p>This is the dircet grandchild paragraph2 </p>
     </div>
   </div>
 </body>
