--- a/Css/AdjacentSelector.html
+++ b/Css/AdjacentSelector.html
@@ -12,7 +12,8 @@
     .adjacent h2 + p + p {
       color: coral
     }
-    .adjacent h4 + h4{
+    /* This maens get to the selected class,then to h2 tag, then to the first p tag next to the h2 tag  */
+    .adjacent h3 + h4{
       color: darkgoldenrod
     }
   </style>
