last commit for day 22

--- a/Css/AttributesSelectors.html
+++ b/Css/AttributesSelectors.html
@@ -12,6 +12,12 @@
     span[id] {
       color: chocolate
     }
+    h2[class] {
+      color: darkgreen
+    }
+    h2[id] {
+      color: darkorange
+    }
   </style>
 </head>
 <body>
@@ -21,6 +27,12 @@
     <span class="second">Do you know me?</span>
     <span>I am on my way</span>
     <span id="forth">I am on my way</span>
+  </div>
+  <div id="main">
+    <h2 class="first">I want to know you</h2>
+    <h2 class="second">Do you know me?</h2>
+    <h2>I am on my way</h2>
+    <h2 id="forth">I am coming</h2>
   </div>
 </body>
 </html>
