more on attribute selectors

--- a/Css/AttributesSelectors.html
+++ b/Css/AttributesSelectors.html
@@ -18,6 +18,12 @@
     h2[id] {
       color: darkorange
     }
+    div a[title]{
+      color: red;
+    }
+    h2 a[title='first']{
+      color: deeppink
+    }
   </style>
 </head>
 <body>
@@ -34,5 +40,14 @@
     <h2>I am on my way</h2>
     <h2 id="forth">I am coming</h2>
   </div>
+  <div>
+    <a href="#" title="first">I am a programmer</a>
+    <a href="#" title="second">I am intellingent</a>
+    <a href="#" >I'm cool</a>
+  </div>
+  <h2>
+    <a href="#" title="first">He is in me</a>
+    <a href="#">He loves me</a>
+  </h2>
 </body>
 </html>
