last for atrribute selector

--- a/Css/AttributesSelectors.html
+++ b/Css/AttributesSelectors.html
@@ -24,6 +24,10 @@
     h2 a[title='first']{
       color: deeppink
     }
+    section h3[class~='ben']{
+      background-color: rgb(80, 92, 255)
+    }
+    /* The sign attached to it means select all classes called ben. Wheather just ben, or with another class */
   </style>
 </head>
 <body>
@@ -49,5 +53,13 @@
     <a href="#" title="first">He is in me</a>
     <a href="#">He loves me</a>
   </h2>
+
+  <section>
+    <div>
+      <h3 class="ben May">I will be a mother some day</h3>
+      <h3 class="ben">I love my mum</h3>
+      <h3 class="ben">My silblings are amazing</h3>
+    </div>
+  </section>
 </body>
 </html>
