--- a/Css/AttributesSelectors.html
+++ b/Css/AttributesSelectors.html
@@ -25,7 +25,8 @@
       color: deeppink
     }
     section h3[class~='ben']{
-      background-color: rgb(80, 92, 255)
+      color: rgb(73, 45, 4);
+      font-size: 30px
     }
     /* The sign attached to it means select all classes called ben. Wheather just ben, or with another class */
   </style>
