--- a/Css/Pseudo.html
+++ b/Css/Pseudo.html
@@ -12,6 +12,17 @@
     div p:last-child{
       color: #b31706
     }
+    section p:first-of-type{
+      color: #0ce113;
+      font-size: 30px
+    }
+    section p:last-of-type{
+      color: blueviolet;
+      font-size: 30px
+    }
+    article li:nth-child(2), li:nth-child(5){
+      color: darkorange
+    }
   </style>
 </head>
 <body>
@@ -21,14 +32,25 @@
     <p>The least you could do is to be good</p>
     <p>I trust you</p>
     <p>I know a man called Immanuel</p>
+    <li>Ok</li>
   </div>
 
   <section>
-    <h2></h2>
-    <p></p>
-    <p></p>
-    <p></p>
-    <h2></h2>
+    <h2>I am a programmer</h2>
+    <p>I write code</p>
+    <p>I understand code</p>
+    <p>I debug codes</p>
+    <h2>I want to be a hacker</h2>
   </section>
+
+  <article>
+    <li>I</li>
+    <li>Am</li>
+    <li>A</li>
+    <li>Winner</li>
+    <li>In</li>
+    <li>My</li>
+    <li>Field</li>
+  </article>
 </body>
 </html>
