created sizing.html and inculcated text-transform, color andfont-family into it

--- a/Css/Pseudo.html
+++ b/Css/Pseudo.html
@@ -6,8 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <style>
-    div p:first-child{
-      color: blue
+    div h1:first-child{
+      background-color: #b31706
+    } 
+    div h1:first-of-type{
+      font-size: 40px
     }
     div p:last-child{
       color: #b31706
@@ -25,6 +28,7 @@
 <body>
   <div>
     <p>Programmers, are bad name givers!!!</p>
+    <h1>I am the I am</h1>
     <p>I have a plan</p>
     <p>The least you could do is to be good</p>
     <p>I trust you</p>
@@ -32,6 +36,7 @@
     <li>Ok</li>
   </div>
   <section>
+    <h1>I am the I am</h1>
     <h2>I am a programmer</h2>
     <p>I write code</p>
     <p>I understand code</p>
