added background color

--- a/Css/BlockElements.html
+++ b/Css/BlockElements.html
@@ -8,22 +8,86 @@
   <style>
     .div div{
       border: 1px solid red;
-      margin: 5px
+      margin: 5px;padding: 3px;
+      background-color: chartreuse
+    }
+    .div1 div{
+      border: 1px solid red;
+      margin: 5px;padding: 3px;
+      display: inline;
+      background-color: chocolate
     }
     .span span{
       border: 1px solid green;
-      margin: 5px
+      margin: 5px;
+      margin: 5px;padding: 3px;
+      background-color: cyan
+    }
+    .span1 span{
+      border: 1px solid green;
+      margin: 5px;
+      margin: 5px;padding: 3px;
+      display: inline-block;
+      background-color: darkorchid
     }
   </style>
 </head>
 <body>
   <article>
     <div class="div">
+      <p>Original Block elements</p>
+      <div>I am in a div</div>
+      <div>I am in a div</div>
+      <div>I am in a div</div>
+    </div>
+    <div class="div1">
+      <p>Display Block elements to inline</p>
+      <div>I am in a div</div>
+      <div>I am in a div</div>
+      <div>I am in a div</div>
+      <div>I am in a div</div>
+      <div>I am in a div</div>
+      <div>I am in a div</div>
+      <div>I am in a div</div>
+      <div>I am in a div</div>
+      <div>I am in a div</div>
+      <div>I am in a div</div>
+      <div>I am in a div</div>
+      <div>I am in a div</div>
       <div>I am in a div</div>
       <div>I am in a div</div>
       <div>I am in a div</div>
     </div>
     <div class="span">
+      <p>Inline elements</p>
+      <span>I am in a span</span>
+      <span>I am in a span</span>
+      <span>I am in a span</span>
+      <span>I am in a span</span>
+      <span>I am in a span</span>
+      <span>I am in a span</span>
+      <span>I am in a span</span>
+      <span>I am in a span</span>
+      <span>I am in a span</span>
+      <span>I am in a span</span>
+      <span>I am in a span</span>
+      <span>I am in a span</span>
+      <span>I am in a span</span>
+      <span>I am in a span</span>
+    </div>
+    <div class="span1">
+      <p>Inline to inline-block elements</p>
+      <span>I am in a span</span>
+      <span>I am in a span</span>
+      <span>I am in a span</span>
+      <span>I am in a span</span>
+      <span>I am in a span</span>
+      <span>I am in a span</span>
+      <span>I am in a span</span>
+      <span>I am in a span</span>
+      <span>I am in a span</span>
+      <span>I am in a span</span>
+      <span>I am in a span</span>
       <span>I am in a span</span>
       <span>I am in a span</span>
       <span>I am in a span</span>
