--- a/Css/Background.html
+++ b/Css/Background.html
@@ -32,11 +32,22 @@
       background-color: yellow;
       background-size: 50%;
     }
+    div:nth-child(4)  {
+      background-color: coral;
+      height: 400px;
+      width: 600px;
+      background-image: url(../img/kring.png),url(../img/kring.png);
+      background-repeat: no-repeat, no-repeat;
+      background-position: top right, center;
+      background-size: 80px, 50%;
+    }
   </style>
 </head>
 <body>
   <div>I can't die for it</div>
   <div>I can't die for it</div>
   <div>I can't die for it</div>
+
+  <div>Multiple backgrounds</div>
 </body>
 </html>
