last commit for day 57

--- a/Css/Background.html
+++ b/Css/Background.html
@@ -27,13 +27,13 @@
       width: 200px;
       border: 1px solid red;
       background-image: url(../img/kring.png);
-      background-position: center;
       background-repeat: no-repeat;
       background-color: yellow;
+      background-position: center;
       background-size: 50%;
     }
     div:nth-child(4)  {
-      background-color: coral;
+      background-color: rgb(255, 127, 80);
       height: 400px;
       width: 600px;
       background-image: url(../img/kring.png),url(../img/kring.png);
