--- a/Css/color.html
+++ b/Css/color.html
@@ -5,8 +5,47 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+  <style>
+    div{
+      height: 200px;
+      width: 200px;
+      display: inline-block;
+    }
+    div:first-child{
+      background-color: #990000
+    }
+    div:nth-child(2) {
+      background-color: #005000
+
+    }
+    div:nth-child(3){
+      background-color: #000090
+    }
+    div:nth-child(4){
+      background-color: #000000
+    }
+    div:nth-child(5){
+      background-color: #999999
+    }
+    div:nth-child(6){
+      background-color: #aaaaaa
+    }
+    div:nth-child(7){
+      background-color: #ffffff
+    }
+    div:nth-child(8){
+      background-color: #555555
+    }
+  </style>
 </head>
 <body>
-  
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
 </body>
 </html>
