--- a/Css/Opacity.html
+++ b/Css/Opacity.html
@@ -12,34 +12,38 @@
       width: 300px;
       border-radius: 50%;
       position: absolute;
-      top: 20px;
-      left: 30px;
+      top: 50px;
+      left: 50px;
+      opacity: 0.5;
+      text-align: center;
     }
     div:nth-child(2){
       background-color: rgb(255, 0, 128);
       height: 300px;
       width: 300px;
       border-radius: 50%;
-      position: absolute
-      top: 40px;
-      left: 60px;
+      position: absolute;
+      top: 250px;
+      left: 150px;
+      opacity: 0.5;
+      text-align: center;
 
     }
     div:nth-child(3){
-      background-color: rgb(255, 217, 0);
+      background-color: rgba(255, 217, 0, 0.5);
       height: 300px;
       width: 300px;
       border-radius: 50%;
-      position: absolute
-      
-      top: 40px;
-      left: 60px;
+      position: absolute;
+      top: 50px;
+      left: 250px;
+      text-align: center;
     }
   </style>
 </head>
 <body>
-  <div></div>
-  <div></div>
-  <div></div>
+  <div>I love you</div>
+  <div>I love you</div>
+  <div>I love you</div>
 </body>
 </html>
