lat commit for day 29

--- a/Css/Gradient.html
+++ b/Css/Gradient.html
@@ -6,18 +6,29 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <style> 
+  div{
+    margin: 200px;
+  }
     a{
       border: 1px solid black;
       padding: 12px;
       background: #500000;
-      color: coral;
+      color: white;
       text-decoration: none;
       border-radius: 10%;
       margin-top:  200px;
+      background: -moz-linear-gradient(top, rgb(88, 37, 3) 0%, rgb(187, 81, 1) 100%)
+    }
+    a:hover{
+      background: -moz-linear-gradient(bottom, rgb(88, 37, 3) 0%, rgb(187, 81, 1) 100%)
+
     }
   </style>
 </head>
 <body>
-  <a href="#">CLICK ME</a>
+  <div>
+
+    <a href="#">CLICK ME</a>
+  </div>
 </body>
 </html>
